--- a/pages/19022.html
+++ b/pages/19022.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      split supersymmetry in nLab
+      sfermion in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      split supersymmetry
+      sfermion
   </h1>
 
 
@@ -701,95 +701,48 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a><ul><li><a href='#mssm'><math class='maruku-mathml' display='inline' id='mathml_6b68d226fda6af0a63ebcf6c5119648b7e8322c8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/particle+physics'>particle physics</a> <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a>, the term <em>split supersymmetry</em> refers to <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a> of <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetric</a> extensions of the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> whose <a class='existingWikiWord' href='/nlab/show/supersymmetry+breaking'>supersymmetry breaking</a>-<a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale</a> is very high (for instance at <a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a>-scale of about <math class='maruku-mathml' display='inline' id='mathml_6b68d226fda6af0a63ebcf6c5119648b7e8322c8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>15</mn></msup></mrow><annotation encoding='application/x-tex'>10^{15}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>), much higher than the <a class='existingWikiWord' href='/nlab/show/electroweak+symmetry+breaking'>electroweak symmetry breaking</a>-<a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale</a> (of about 246 <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>), but such that approximate <a class='existingWikiWord' href='/nlab/show/chiral+anomaly'>chiral symmetry</a> <a class='existingWikiWord' href='/nlab/show/protection+from+quantum+corrections'>protects</a> the <a class='existingWikiWord' href='/nlab/show/mass'>masses</a> of the <a class='existingWikiWord' href='/nlab/show/fermion'>fermionic</a> <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a>.</p>
+<p>The (hypothetical) <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a> of <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a> are called <em>sfermions</em>.</p>
 
-<p>As a result, in such <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a> there is a “split” of the <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <a class='existingWikiWord' href='/nlab/show/scale+transformation'>scales</a> of the <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/particle'>particles</a>:</p>
+<p>Generally, for ever fermions species, the corresponding superpartner species name is given by pre-fixing an “s”.</p>
 
-<ol>
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar</a> <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a> (the <a class='existingWikiWord' href='/nlab/show/sfermion'>sfermions</a>, hence the <a class='existingWikiWord' href='/nlab/show/squark'>squarks</a> and <a class='existingWikiWord' href='/nlab/show/slepton'>sleptons</a>) have high <a class='existingWikiWord' href='/nlab/show/mass'>rest masses</a>, from tens of <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a> (mass scale of the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a>) up to the <a class='existingWikiWord' href='/nlab/show/supersymmetry+breaking'>supersymmetry breaking</a>-scale many order of magnitudes higher;</p>
-</li>
+<p>For instance “<a class='existingWikiWord' href='/nlab/show/squark'>squarks</a>” is the name for the (hypothetical) superpartners of <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>.</p>
 
-<li>
-<p>the fermionic <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a> (<a class='existingWikiWord' href='/nlab/show/gaugino'>gauginos</a> and <a class='existingWikiWord' href='/nlab/show/higgsino'>higgsino</a>) have masses much closer to the <a class='existingWikiWord' href='/nlab/show/electroweak+symmetry+breaking'>electroweak symmetry breaking</a> scale, at about one <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a>.</p>
-</li>
-</ol>
+<h2 id='related_concepts'>Related concepts</h2>
 
-<p>(see <a href='#ArkaniHamedDimopoulosGiudiceRomanino05'>Arkani-Hamed, Dimopoulos, Giudice, Romanino 05, p 2.</a>)</p>
-
-<p>Therefore one speaks of “split supersymmetry” (<a href='#GiudiceRomanino04'>Giudice-Romanino 04</a>).</p>
-
-<p>Historically, the consideration of split supersymmetry (<a href='#ArkaniHamedDimopoulos05'>Arkani-Hamed, Dimopoulos 04</a>) was in contrast to the folklore of “<a class='existingWikiWord' href='/nlab/show/naturalness'>naturalness</a>” which governed <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a> <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model</a>-building. Split supersymmetry was motivated by the observation that many other theoretical problems of low-scale susy models disappear if one does not insist on “<a class='existingWikiWord' href='/nlab/show/naturalness'>naturalness</a>”. Indeed, after the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> produced first observational results, susy models exhibiting “<a class='existingWikiWord' href='/nlab/show/naturalness'>naturalness</a>” were ruled out, while only split supersymmetry models remained viable (this as of beginning of 2018).</p>
-
-<h2 id='examples'>Examples</h2>
-
-<h3 id='mssm'><math class='maruku-mathml' display='inline' id='mathml_6b68d226fda6af0a63ebcf6c5119648b7e8322c8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-MSSM</h3>
-
-<p>The class of <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>physics</a> called <a class='existingWikiWord' href='/nlab/show/G2-MSSM'>G2-MSSM</a> generically exhibits “slightly” split supersymmetry.</p>
-
-<p>From <a href='#Kane17'>Kane 17, p. 43-44 ((5-1)-(5-2))</a>:</p>
-
-<blockquote>
-<p>It is important to understand that there are two measures relevant to understanding supersymmetry breaking, one the scale at which it is broken (about <math class='maruku-mathml' display='inline' id='mathml_6b68d226fda6af0a63ebcf6c5119648b7e8322c8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>14</mn></msup></mrow><annotation encoding='application/x-tex'>10^{14}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a> as described above), and the other the resulting <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> mass. In the <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>compactified</a> <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> case the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> mass is calculated, and comes out to be about 40 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a> (40 000 <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>). Sometimes even experts confuse these two scales if they are speculating about <a class='existingWikiWord' href='/nlab/show/supersymmetry+breaking'>supersymmetry breaking</a> without a real theory to calculate.</p>
-
-<p>Thus 40 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a> is the natural scale for <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> masses. That is not a surprising number in a theory starting with everything at the <a class='existingWikiWord' href='/nlab/show/Planck+scale'>Planck scale</a>, but it is surprising if one expects the superpartner masses to be near the particle masses (all well below 1 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a>). The <a class='existingWikiWord' href='/nlab/show/squark'>squarks</a> and other masses are indeed predicted to be at the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> scale, tens of <a class='existingWikiWord' href='/nlab/show/TeV'>tera-electronvolts</a>.</p>
-
-<p>The theory has formulas (‘supergravity formulas’) for all the masses. When one calculates carefully the masses of the superpartners of the <a class='existingWikiWord' href='/nlab/show/gauge+boson'>gauge bosons</a> that mediate the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>Standard Model</a> forces they turn out to get no contribution from one large source, and the resulting value for the <a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a> of the <a class='existingWikiWord' href='/nlab/show/gauge+boson'>gauge bosons</a> (<a class='existingWikiWord' href='/nlab/show/gaugino'>gauginos</a>) is about 1 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a>, rather than about 40 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a>. They are the <a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a>, photino, zino, and wino. The strong force gluino is heavier, about 1.5 <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a> or somewhat more, and the <a class='existingWikiWord' href='/nlab/show/electroweak+field'>electroweak</a> ones (photino, zino, wino) are somewhat lighter, about half a <a class='existingWikiWord' href='/nlab/show/TeV'>tera-electronvolt</a>.</p>
-</blockquote>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/split+supersymmetry'>split supersymmetry</a></li>
+</ul>
 
 <h2 id='references'>References</h2>
 
-<p>The idea originates with</p>
-
 <ul>
-<li id='ArkaniHamedDimopoulos04'>
-<p><a class='existingWikiWord' href='/nlab/show/Nima+Arkani-Hamed'>Nima Arkani-Hamed</a>, <a class='existingWikiWord' href='/nlab/show/Savas+Dimopoulos'>Savas Dimopoulos</a>, <em>Supersymmetric Unification Without Low Energy Supersymmetry And Signatures for Fine-Tuning at the LHC</em>, JHEP 0506 (2005) 073 (<a href='https://arxiv.org/abs/hep-th/0405159'>arXiv:hep-th/0405159</a>)</p>
-</li>
-
-<li id='GiudiceRomanino04'>
-<p><a class='existingWikiWord' href='/nlab/show/Gian+Giudice'>Gian Francesco Giudice</a>, A. Romanino, <em>Split Supersymmetry</em>, Nucl. Phys. B699:65-89,2004; Erratum-ibid.B706:65-89,2005 (<a href='https://arxiv.org/abs/hep-ph/0406088'>arXiv:hep-ph/0406088</a>)</p>
-</li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Sfermion'>Sfermions</a></em></li>
 </ul>
 
-<p>Further discussion includes</p>
-
-<ul>
-<li id='ArkaniHamedDimopoulosGiudiceRomanino05'><a class='existingWikiWord' href='/nlab/show/Nima+Arkani-Hamed'>Nima Arkani-Hamed</a>, <a class='existingWikiWord' href='/nlab/show/Savas+Dimopoulos'>Savas Dimopoulos</a>, <a class='existingWikiWord' href='/nlab/show/Gian+Giudice'>Gian Francesco Giudice</a>, A. Romanino, <em>Aspects of Split Supersymmetry</em>, Nucl. Phys. B709:3-46, 2005 (<a href='https://arxiv.org/abs/hep-ph/0409232'>arXiv:hep-ph/0409232</a>)</li>
-</ul>
-
-<p>Popular discussion of the “slightly split” <a class='existingWikiWord' href='/nlab/show/G2-MSSM'>G2-MSSM</a> is in</p>
-
-<ul>
-<li id='Kane17'><a class='existingWikiWord' href='/nlab/show/Gordon+Kane'>Gordon Kane</a>, <em>String theory and the real world</em>, Morgan &amp; Claypool, 2017 (<a href='http://iopscience.iop.org/book/978-1-6817-4489-6'>doi:0.1088/978-1-6817-4489-6</a>)</li>
-</ul>
-
-<p>See also</p>
-
-<ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Split_supersymmetry'>Split supersymmetry</a></em></li>
-</ul>
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on February 21, 2018 14:53:05 
+  Created on February 21, 2018 14:03:00 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.206)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/split+supersymmetry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/sfermion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/split+supersymmetry" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/sfermion" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/split+supersymmetry" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/sfermion" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/split+supersymmetry" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/sfermion" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
