--- a/pages/18412.html
+++ b/pages/18412.html
@@ -315,11 +315,15 @@ margin-left: 0em;
 <li><a href='https://en.wikipedia.org/wiki/Gian_Francesco_Giudice'>Wikipedia entry</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d36cea32111421cb4c376620241364044832fa43_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_2cd6e5cbbb7bcf5f7e586ff3bd3276f9749cd556_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/naturalness'>naturalness</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/split+supersymmetry'>split supersymmetry</a></p>
 </li>
 
 <li>
@@ -331,14 +335,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 20, 2017 07:21:44 
+  Revised on February 21, 2018 14:44:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.49.59)
+  (91.230.41.206)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gian+Giudice" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gian+Giudice/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Gian+Giudice" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gian+Giudice" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gian+Giudice" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gian+Giudice/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Gian+Giudice" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gian+Giudice" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
