--- a/pages/9073.html
+++ b/pages/9073.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,18 +312,24 @@ margin-left: 0em;
 <li><a href='http://www.sns.ias.edu/~arkani/'>webpage</a></li>
 </ul>
 
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_08d61599b6b4a57f8aa796a206012d110a9d21dd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/split+supersymmetry'>split supersymmetry</a></li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on December 28, 2012 02:03:23 
+  Revised on February 21, 2018 14:43:50 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.153.88)
+  (91.230.41.206)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Nima+Arkani-Hamed" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Nima+Arkani-Hamed" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Nima+Arkani-Hamed/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Nima+Arkani-Hamed" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Nima+Arkani-Hamed" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
