--- a/pages/9181.html
+++ b/pages/9181.html
@@ -390,9 +390,9 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/MSSM'>minimally extended supersymmetric standard model</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartners</a></strong></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a>:</p>
+<p>bosinos:</p>
 
 <ul>
 <li>
@@ -402,12 +402,16 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> - <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills field</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a></p>
+</li>
 </ul>
 
-<p><a class='existingWikiWord' href='/nlab/show/boson'>bosons</a>:</p>
+<p><a class='existingWikiWord' href='/nlab/show/sfermion'>sfermions</a>:</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/squark'>squark</a></li>
 </ul>
 
 <p><strong>Exotica</strong></p>
@@ -448,14 +452,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 13, 2018 19:01:35 
+  Revised on February 21, 2018 14:11:16 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  (91.230.41.206)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fields+and+quanta+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fields+and+quanta+-+table/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/fields+and+quanta+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fields+and+quanta+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fields+and+quanta+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fields+and+quanta+-+table/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/fields+and+quanta+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fields+and+quanta+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
