--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,18 +308,20 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><math class='maruku-mathml' display='inline' id='mathml_4a6d18ff448c6f36ce1d40640ac79cdf65bb09ac_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>&gt;</mi></mrow><annotation encoding='application/x-tex'>&gt;</annotation></semantics></math></p>
+    <blockquote>
+<p>Quote</p>
+</blockquote>
 </div>
 
 <div class="revisedby">
-  Revised on February 21, 2018 15:07:25 
+  Revised on February 21, 2018 16:07:56 
   by <a class="existingWikiWord" href="/nlab/show/Richard+Williamson">Richard Williamson</a>
   (84.202.247.109)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1439" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1439 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1440" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1440 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
