--- a/pages/673.html
+++ b/pages/673.html
@@ -309,13 +309,11 @@ margin-left: 0em;
 
 <div id="revision">
     <div style='float: right; margin: 0 20px 10px 20px;'><img alt='David Roberts speaking at Herriot-Watt, June 2014' border='1' height='225' src='https://ncatlab.org/nlab/files/DavidRoberts2014.jpg' title='Speaking at Herriot-Watt, June 2014' width='225'/></div>
-<p>I am currently a visiting research fellow at the <a href='http://www.iga.adelaide.edu.au/'>Institute for Geometry and its Applications</a> in the <a href='http://maths.adelaide.edu.au/'>School of Mathematical Sciences</a> at the University of Adelaide.</p>
-
-<p>For the period July-2017-February 2018 I will be a Lecturer at the University of Adelaide. After that I will take up a position as a Senior Research Associate for 2.5 years.</p>
+<p>I am currently a Research Associate (that is, a postdoc) at the <a href='http://www.iga.adelaide.edu.au/'>Institute for Geometry and its Applications</a> in the <a href='http://maths.adelaide.edu.au/'>School of Mathematical Sciences</a> at the University of Adelaide.</p>
 
 <p>I work on <a class='existingWikiWord' href='/nlab/show/bundle+gerbe'>bundle gerbes</a>, <a class='existingWikiWord' href='/nlab/show/principal+2-bundle'>2-bundles</a>, <a class='existingWikiWord' href='/nlab/show/geometric+stack'>geometric stacks</a> and <a class='existingWikiWord' href='/nlab/show/internal+category'>internal groupoids and categories</a>, and <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> more generally with a side interest in <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations</a>. I have a particular interest in constructing examples in (low-dimensional) <a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a>.</p>
 
-<p>I was a Research Associate (i.e. a postdoc) at the University of Adelaide from October 2013 to April 2015.</p>
+<p>I was a Research Associate (i.e. a postdoc) at the University of Adelaide from October 2013 to April 2015. For the period July-2017 to February 2018 I was a Lecturer in the School of Mathematical Sciences.</p>
 
 <p>You may also find me on: <a href='https://www.ams.org/mathscinet/search/author.html?mrauthid=788905'>MathSciNet</a>|<a href='https://mathoverflow.net/users/4177/david-roberts'>MathOverflow</a>|<a href='https://plus.google.com/+DavidRoberts/'>Google+</a>|<a href='https://arxiv.org/a/roberts_d_1.html'>arXiv</a>|<a href='http://orcid.org/0000-0002-3478-0522'>ORCiD</a>|<a href='publons.com/a/430214/'>Publons</a></p>
 
@@ -333,7 +331,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Smooth loop stacks of differentiable stacks and gerbes</em>, <a href='https://arxiv.org/abs/1602.07973'>arXiv:1602.07973</a>. Accepted 15 January 2018 to appear, <a class='existingWikiWord' href='/nlab/show/Cahiers'>Cahiers de Topologie et Géométrie Différentielle Catégoriques</a>. Joint with <a class='existingWikiWord' href='/nlab/show/Raymond+Vozzo'>Raymond Vozzo</a>.</p>
+<p><em>Smooth loop stacks of differentiable stacks and gerbes</em>, <a href='https://arxiv.org/abs/1602.07973'>arXiv:1602.07973</a>. Accepted 15 January 2018 to appear, <a class='existingWikiWord' href='/nlab/show/Cahiers'>Cahiers de Topologie et Géométrie Différentielle Catégoriques</a>, Vol LIX (2018). Joint with <a class='existingWikiWord' href='/nlab/show/Raymond+Vozzo'>Raymond Vozzo</a>.</p>
 </li>
 
 <li>
@@ -398,11 +396,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_4e4a7c35cc7ef534b97000b3516dba453fd436a6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
+<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_9be04ccecef34bc163a05915827c683f6215693b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
 </li>
 
 <li>
-<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_4e4a7c35cc7ef534b97000b3516dba453fd436a6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
+<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_9be04ccecef34bc163a05915827c683f6215693b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
 </li>
 
 <li>
@@ -516,14 +514,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 14, 2018 20:36:10 
+  Revised on February 22, 2018 01:25:36 
   by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
   (129.127.5.20)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/147" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(147 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/148" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(148 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
