--- a/pages/19027.html
+++ b/pages/19027.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Charles Thorn in nLab
+      Kevin Sackel in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Charles Thorn
+      Kevin Sackel
   </h1>
 
 
@@ -308,45 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
-</p>
-
-<ul>
-<li>
-<p><a href='http://www.phys.ufl.edu/~thorn/'>webpage</a></p>
-</li>
-
-<li>
-<p><a href='https://en.wikipedia.org/wiki/Charles_Thorn'>Wikipedia entry</a></p>
-</li>
+    <ul>
+<li><a href='http://math.mit.edu/~ksackel/about.html'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_e17c00c63d8ec4d2d75908675de29c911243b3fa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_c972195358ba9bf7dbead96d49e3ba184080445e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/string+bit+model'>string bit model</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/H-cohomology'>H-cohomology</a></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on February 22, 2018 09:48:17 
+  Created on February 22, 2018 09:01:47 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Charles+Thorn" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Charles+Thorn/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Charles+Thorn" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Charles+Thorn" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Kevin+Sackel" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Charles+Thorn" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Kevin+Sackel" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Charles+Thorn" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Kevin+Sackel" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Charles+Thorn" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Kevin+Sackel" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
