--- a/pages/4368.html
+++ b/pages/4368.html
@@ -453,7 +453,7 @@ margin-left: 0em;
 <h2 id='the_idea'>The idea</h2>
 
 <p><strong>Gabriel–Ulmer duality</strong> says that there is an <a class='existingWikiWord' href='/nlab/show/equivalence+of+categories'>equivalence</a> of <a class='existingWikiWord' href='/nlab/show/2-category'>2-categories</a> (or in other words, a <a class='existingWikiWord' href='/nlab/show/equivalence+of+2-categories'>biequivalence</a>)</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b0be903ee4a4a2fc507d852adcef651064fdaff4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable displaystyle='false' rowspacing='0.5ex'><mtr><mtd><msup><mi>Lex</mi> <mi>op</mi></msup></mtd> <mtd><mo>→</mo></mtd> <mtd><mi>LFP</mi></mtd></mtr> <mtr><mtd><mi>C</mi></mtd> <mtd><mo>↦</mo></mtd> <mtd><mi>Lex</mi><mo stretchy='false'>(</mo><mi>C</mi><mo>,</mo><mi>Set</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'> 
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_83a4b1aacf39c4e370025e89d7c6dfdfc3c84fb2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable displaystyle='false' rowspacing='0.5ex'><mtr><mtd><msup><mi>Lex</mi> <mi>op</mi></msup></mtd> <mtd><mo>→</mo></mtd> <mtd><mi>LFP</mi></mtd></mtr> <mtr><mtd><mi>C</mi></mtd> <mtd><mo>↦</mo></mtd> <mtd><mi>Lex</mi><mo stretchy='false'>(</mo><mi>C</mi><mo>,</mo><mi>Set</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'> 
 \begin{matrix}
 Lex^{op} &amp; \to &amp;  LFP \\
   C      &amp; \mapsto &amp; Lex(C, Set) 
@@ -492,7 +492,7 @@ Lex^{op} &amp; \to &amp;  LFP \\
 </li>
 </ul>
 
-<p>The idea is that an object <math class='maruku-mathml' display='inline' id='mathml_b0be903ee4a4a2fc507d852adcef651064fdaff4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>∈</mo><mi>Lex</mi></mrow><annotation encoding='application/x-tex'>C \in Lex</annotation></semantics></math> can be thought of as an <a class='existingWikiWord' href='/nlab/show/essentially+algebraic+theory'>essentially algebraic theory</a>, which has a category of <a class='existingWikiWord' href='/nlab/show/model'>models</a> <math class='maruku-mathml' display='inline' id='mathml_b0be903ee4a4a2fc507d852adcef651064fdaff4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Lex</mi><mo stretchy='false'>(</mo><mi>C</mi><mo>,</mo><mi>Set</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Lex(C,Set)</annotation></semantics></math>. Gabriel–Ulmer duality says that this category of models is locally finitely presentable, all LFP categories arise in this way, and we can recover the theory <math class='maruku-mathml' display='inline' id='mathml_b0be903ee4a4a2fc507d852adcef651064fdaff4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> from its category of models.</p>
+<p>The idea is that an object <math class='maruku-mathml' display='inline' id='mathml_83a4b1aacf39c4e370025e89d7c6dfdfc3c84fb2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>∈</mo><mi>Lex</mi></mrow><annotation encoding='application/x-tex'>C \in Lex</annotation></semantics></math> can be thought of as an <a class='existingWikiWord' href='/nlab/show/essentially+algebraic+theory'>essentially algebraic theory</a>, which has a category of <a class='existingWikiWord' href='/nlab/show/model'>models</a> <math class='maruku-mathml' display='inline' id='mathml_83a4b1aacf39c4e370025e89d7c6dfdfc3c84fb2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Lex</mi><mo stretchy='false'>(</mo><mi>C</mi><mo>,</mo><mi>Set</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Lex(C,Set)</annotation></semantics></math>. Gabriel–Ulmer duality says that this category of models is locally finitely presentable, all LFP categories arise in this way, and we can recover the theory <math class='maruku-mathml' display='inline' id='mathml_83a4b1aacf39c4e370025e89d7c6dfdfc3c84fb2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> from its category of models.</p>
 
 <h2 id='references'>References</h2>
 
@@ -526,7 +526,7 @@ Lex^{op} &amp; \to &amp;  LFP \\
 
 <p>For a 2-dimensional analogue see the slides from a 2010 talk by Makkai: <a href='http://www.math.mcgill.ca/makkai/scans/2010Washington0001.pdf'>pdf</a></p>
 
-<p>The version for <math class='maruku-mathml' display='inline' id='mathml_b0be903ee4a4a2fc507d852adcef651064fdaff4_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched categories</a>, where <math class='maruku-mathml' display='inline' id='mathml_b0be903ee4a4a2fc507d852adcef651064fdaff4_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is closed symmetric monoidal category whose underlying category <math class='maruku-mathml' display='inline' id='mathml_b0be903ee4a4a2fc507d852adcef651064fdaff4_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>V_0</annotation></semantics></math> is locally small, complete and cocomplete is in section 9 (cf. theorem 9.8)</p>
+<p>The version for <math class='maruku-mathml' display='inline' id='mathml_83a4b1aacf39c4e370025e89d7c6dfdfc3c84fb2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched categories</a>, where <math class='maruku-mathml' display='inline' id='mathml_83a4b1aacf39c4e370025e89d7c6dfdfc3c84fb2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is closed symmetric monoidal category whose underlying category <math class='maruku-mathml' display='inline' id='mathml_83a4b1aacf39c4e370025e89d7c6dfdfc3c84fb2_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>V</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>V_0</annotation></semantics></math> is locally small, complete and cocomplete is in section 9 (cf. theorem 9.8)</p>
 
 <ul>
 <li>G. M. Kelly, <em>Structures defined by finite limits in the enriched context</em>, Cahiers de Topologie et Géométrie Différentielle catégoriques, <strong>23</strong> no. 1 (1982), pp. 3-42, <a href='http://www.ams.org/mathscinet-getitem?mr=648793'>MR648793</a>,<a href='http://www.numdam.org/item?id=CTGDC_1982__23_1_3_0'>numdam</a></li>
@@ -544,6 +544,8 @@ Lex^{op} &amp; \to &amp;  LFP \\
 </li>
 </ul>
 
+<p>For a discussion of an <math class='maruku-mathml' display='inline' id='mathml_83a4b1aacf39c4e370025e89d7c6dfdfc3c84fb2_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-version of Gabriel-Ulmer duality see this <a href='https://mathoverflow.net/q/293031/447'>MO discussion</a>.</p>
+
 <p>
  
  
@@ -551,14 +553,14 @@ Lex^{op} &amp; \to &amp;  LFP \\
 </div>
 
 <div class="revisedby">
-  Revised on May  8, 2016 13:23:32 
-  by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (176.7.89.208)
+  Revised on February 22, 2018 10:59:10 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gabriel-Ulmer+duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gabriel-Ulmer+duality/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Gabriel-Ulmer+duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gabriel-Ulmer+duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gabriel-Ulmer+duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gabriel-Ulmer+duality/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Gabriel-Ulmer+duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gabriel-Ulmer+duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
