--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,56 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation' id='eq:CFieldAtSMinusSix'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_8bb0274cd3207db9536df0ff3000e103c53e152c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mi>H</mi></mtd> <mtd><mo>≔</mo><mspace width='thickmathspace'></mspace><munder><munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mrow><mn>3</mn><mo>⋅</mo><mn>5</mn><mo>!</mo></mrow></mfrac></mstyle><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>c</mi></msup><msub><mrow></mrow> <mi>c</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>c</mi></msup><msub><mrow></mrow> <mi>a</mi></msub></mrow><mo>⏟</mo></munder><mrow><msub><mi>H</mi> <mrow><mo stretchy='false'>(</mo><mi>fib</mi><mo stretchy='false'>)</mo></mrow></msub></mrow></munder></mtd></mtr> <mtr><mtd></mtd> <mtd><mphantom><mo>=</mo></mphantom><mo>+</mo><munder><munder><mrow><mstyle displaystyle='false'><mfrac><mn>1</mn><mrow><mn>4</mn><mo>!</mo></mrow></mfrac></mstyle><msub><mi>B</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msub><mo>∧</mo><msup><mi>e</mi> <mi>a</mi></msup><mo>∧</mo><msup><mi>e</mi> <mi>b</mi></msup></mrow><mo>⏟</mo></munder><mrow><msub><mi>H</mi> <mrow><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msub></mrow></munder><mo>+</mo><munder><munder><mrow><mstyle displaystyle='false'><mfrac><mi>i</mi><mrow><mn>4</mn><mo>⋅</mo><mn>5</mn><mo>!</mo></mrow></mfrac></mstyle><mover><mi>η</mi><mo>¯</mo></mover><mrow><mo>(</mo><mn>10</mn><msub><mi>Γ</mi> <mi>a</mi></msub><msup><mi>e</mi> <mi>a</mi></msup><mo>+</mo><mi>i</mi><msub><mi>Γ</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msub><msup><mi>B</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msup><mo>)</mo></mrow><mi>ψ</mi></mrow><mo>⏟</mo></munder><mrow><msub><mi>H</mi> <mrow><mo stretchy='false'>(</mo><mi>ferm</mi><mo stretchy='false'>)</mo></mrow></msub></mrow></munder></mtd></mtr></mtable></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  
-  \begin{aligned}
-    H
-    &amp; \coloneqq\;
-    \underset{
-      H_{(fib)}
-    }{
-    \underbrace{
-     - \tfrac{1}{3 \cdot 5!}
-     B^a{}_b \wedge B^c{}_c \wedge B^c{}_a
-    }}
-    \\
-    &amp; \phantom{=} +
-    \underset{
-      H_{(1)}
-    }{
-    \underbrace{
-     \tfrac{1}{4!}
-     B_{a b} \wedge e^a \wedge e^b  
-    }}
-    +
-    \underset{
-      H_{(ferm)}
-    }{
-    \underbrace{
-    \tfrac{i}{4 \cdot 5!}
-    \overline{\eta}
-    \left(
-      10 \Gamma_a e^a
-      +
-      i \Gamma_{a b} B^{a b}
-    \right)
-    \psi
-    }}
-  \end{aligned}
-  \,.
-
-</annotation></semantics></math></div>
+    <p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjsssssssssssssssssssssssssssssssssssssssssssssssssssssssssssjjjjjjjjjjjjjsssjsysysysyy</p>
 </div>
 
 <div class="revisedby">
-  Revised on February 22, 2018 10:56:57 
+  Revised on February 22, 2018 11:33:45 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1443" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1443 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1444" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1444 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
