--- a/pages/18334.html
+++ b/pages/18334.html
@@ -377,7 +377,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Reshetikhin-Turaev+construction'>Reshetikhin–Turaev model</a> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
+<p><span class='newWikiWord'>Reshetikhin?Turaev model<a href='/nlab/new/Reshetikhin%3FTuraev+model'>?</a></span> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
 </li>
 
 <li>
@@ -680,7 +680,7 @@ margin-left: 0em;
 </li>
 
 <li id='BeniniSchenkelWoike17'>
-<p><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <span class='newWikiWord'>Lukas Woike<a href='/nlab/new/Lukas+Woike'>?</a></span>, <em>Operads for algebraic quantum field theory</em> (<a href='https://arxiv.org/abs/1709.08657'>arXiv:1709.08657</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <a class='existingWikiWord' href='/nlab/show/Lukas+Woike'>Lukas Woike</a>, <em>Operads for algebraic quantum field theory</em> (<a href='https://arxiv.org/abs/1709.08657'>arXiv:1709.08657</a>)</p>
 </li>
 </ul>
 
@@ -688,6 +688,12 @@ margin-left: 0em;
 
 <ul>
 <li id='BeniniSchenkelSchreiber17'><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <a class='existingWikiWord' href='/nlab/show/Urs+Schreiber'>Urs Schreiber</a>, <em>The stack of Yang-Mills fields on Lorentzian manifolds</em> (<a href='https://arxiv.org/abs/1704.01378'>arXiv:1704.01378</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li id='Yau18'><a class='existingWikiWord' href='/nlab/show/Donald+Yau'>Donald Yau</a>, <em>Homotopical Quantum Field Theory</em> (<a href='https://arxiv.org/abs/1802.08101'>arXiv:1802.08101</a>)</li>
 </ul>
 
 <p>
@@ -698,14 +704,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December  9, 2017 10:57:10 
+  Revised on February 23, 2018 03:34:43 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.46.137.19)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homotopical+algebraic+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopical+algebraic+quantum+field+theory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/homotopical+algebraic+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopical+algebraic+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/homotopical+algebraic+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopical+algebraic+quantum+field+theory/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/homotopical+algebraic+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopical+algebraic+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
