--- a/pages/8805.html
+++ b/pages/8805.html
@@ -309,21 +309,27 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://www.math.osu.edu/~yau.22/'>webpage</a></li>
+<li><a href='https://math.osu.edu/people/yau.22'>webpage</a></li>
+</ul>
+
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_4315c104e5326a3e98701a7aa2a56c8ea87e31f4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical algebraic quantum field theory</a></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on November  7, 2012 03:19:07 
+  Revised on February 23, 2018 03:36:58 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.169.65.155)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Donald+Yau" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Donald+Yau" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Donald+Yau/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Donald+Yau" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Donald+Yau" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
