--- a/pages/18334.html
+++ b/pages/18334.html
@@ -678,10 +678,6 @@ margin-left: 0em;
 <li id='BeniniSchenkel16'>
 <p><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <em>Quantum field theories on categories fibered in groupoids</em>, Communications in Mathematical Physics November 2017, Volume 356, Issue 1, pp 19–64 (<a href='https://arxiv.org/abs/1610.06071'>arXiv:1610.06071</a>)</p>
 </li>
-
-<li id='BeniniSchenkelWoike17'>
-<p><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <a class='existingWikiWord' href='/nlab/show/Lukas+Woike'>Lukas Woike</a>, <em>Operads for algebraic quantum field theory</em> (<a href='https://arxiv.org/abs/1709.08657'>arXiv:1709.08657</a>)</p>
-</li>
 </ul>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/stack'>stack</a> of <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge fields</a> is discussed in</p>
@@ -690,7 +686,13 @@ margin-left: 0em;
 <li id='BeniniSchenkelSchreiber17'><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <a class='existingWikiWord' href='/nlab/show/Urs+Schreiber'>Urs Schreiber</a>, <em>The stack of Yang-Mills fields on Lorentzian manifolds</em> (<a href='https://arxiv.org/abs/1704.01378'>arXiv:1704.01378</a>)</li>
 </ul>
 
-<p>See also</p>
+<p>An <a class='existingWikiWord' href='/nlab/show/operad'>operad</a> for <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local nets of observables</a> in <a class='existingWikiWord' href='/nlab/show/AQFT'>AQFT</a> is considered in</p>
+
+<ul>
+<li id='BeniniSchenkelWoike17'><a class='existingWikiWord' href='/nlab/show/Marco+Benini'>Marco Benini</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Schenkel'>Alexander Schenkel</a>, <a class='existingWikiWord' href='/nlab/show/Lukas+Woike'>Lukas Woike</a>, <em>Operads for algebraic quantum field theory</em> (<a href='https://arxiv.org/abs/1709.08657'>arXiv:1709.08657</a>)</li>
+</ul>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/Boardman-Vogt+resolution'>Boardman-Vogt resolution</a> of the <a class='existingWikiWord' href='/nlab/show/operad'>operad</a> for <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local nets of observables</a> (<a href='#BeniniSchenkelWoike17'>Benini-Schenkel-Woike 17</a>), lifting it to homotopy AQFT, is considered in</p>
 
 <ul>
 <li id='Yau18'><a class='existingWikiWord' href='/nlab/show/Donald+Yau'>Donald Yau</a>, <em>Homotopical Quantum Field Theory</em> (<a href='https://arxiv.org/abs/1802.08101'>arXiv:1802.08101</a>)</li>
@@ -701,17 +703,21 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on February 23, 2018 03:34:43 
+  Revised on February 23, 2018 05:50:03 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homotopical+algebraic+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopical+algebraic+quantum+field+theory/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/homotopical+algebraic+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopical+algebraic+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/homotopical+algebraic+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopical+algebraic+quantum+field+theory/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/homotopical+algebraic+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopical+algebraic+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
