--- a/pages/16534.html
+++ b/pages/16534.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -582,12 +582,12 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Intersection of <a class='existingWikiWord' href='/nlab/show/brane'>branes</a>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/intersection'>intersection</a> of <a class='existingWikiWord' href='/nlab/show/brane'>branes</a> in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a></p>
 
 <h2 id='examples'>Examples</h2>
 
 <p><a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a> with <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+monopole'>KK-monopole</a>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f83b9b04e446c5e442ba9033810208160539207f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>|</mo><mi>M</mi><mn>5</mn><mo>,</mo><mi>KK</mi><mo stretchy='false'>)</mo><mo>=</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd></mtr> <mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>1</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>2</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>3</mn></msub></mtd> <mtd><mi>z</mi></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>10</mn></msub></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9c95a8a0fa9822562a3e880ea56a692a07824f15_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>|</mo><mi>M</mi><mn>5</mn><mo>,</mo><mi>KK</mi><mo stretchy='false'>)</mo><mo>=</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd></mtr> <mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>1</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>2</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>3</mn></msub></mtd> <mtd><mi>z</mi></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>10</mn></msub></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding='application/x-tex'>
   (5\vert M5, KK)
   =
   \left\{
@@ -604,7 +604,13 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/D1-D5+brane+bound+state'>D1-D5 brane bound state</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+model'>intersecting D-brane model</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/D1-D5+brane+bound+state'>D1-D5 brane bound state</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -627,17 +633,20 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on February  4, 2017 11:28:23 
+  Revised on February 24, 2018 12:39:35 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.2)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/brane+intersection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/brane+intersection/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/brane+intersection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/brane+intersection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/brane+intersection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/brane+intersection/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/brane+intersection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/brane+intersection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
