--- a/pages/11479.html
+++ b/pages/11479.html
@@ -322,20 +322,24 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/p-adic+string+theory'>p-adic string theory</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/7-dimensional+supergravity'>7d supergravity</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on April  8, 2014 01:28:37 
+  Revised on February 25, 2018 13:11:23 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.37.147.12)
+  (91.230.41.205)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Peter+Freund" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Peter+Freund" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Peter+Freund/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Peter+Freund" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Peter+Freund" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
