--- a/pages/19038.html
+++ b/pages/19038.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Gerhard Hochschild in nLab
+      Maarten Solleveld in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Gerhard Hochschild
+      Maarten Solleveld
   </h1>
 
 
@@ -309,41 +309,35 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://en.wikipedia.org/wiki/Gerhard_Hochschild'>Wikipedia entry</a></li>
+<li><a href='https://www.math.ru.nl/~solleveld/'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_06becc93a1814d81e85f54343c50b539d1fc800b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_acaad5e6369f32813ebd335c5097eb739713f9fd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Hochschild+cohomology'>Hochschild cohomology</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Hochschild-Serre+spectral+sequence'>Hochschild-Serre spectral sequence</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/Lie+algebra+cohomology'>Lie algebra cohomology</a></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on February 26, 2018 13:01:20 
+  Created on February 26, 2018 13:04:58 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gerhard+Hochschild" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gerhard+Hochschild/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Gerhard+Hochschild" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gerhard+Hochschild" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Maarten+Solleveld" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Gerhard+Hochschild" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Maarten+Solleveld" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Gerhard+Hochschild" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Maarten+Solleveld" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Gerhard+Hochschild" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Maarten+Solleveld" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
