--- a/pages/9922.html
+++ b/pages/9922.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -423,7 +423,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Beilinson-Bernstein+localization'>Beĭlinson-Bernstein localization</a></p>
+<p><span class='newWikiWord'>Be?linson-Bernstein localization<a href='/nlab/new/Be%3Flinson-Bernstein+localization'>?</a></span></p>
 </li>
 
 <li>
@@ -705,7 +705,7 @@ margin-left: 0em;
 
 <h2 id='examples'>Examples</h2>
 
-<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_e2fffd12b832831a081bb0e1d4849c75c16c5d84_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
+<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_d55ef553972a1104b2f6062f045ef33b0c0f367c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
 
 <ul>
 <li>
@@ -731,7 +731,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_e2fffd12b832831a081bb0e1d4849c75c16c5d84_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
+<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_d55ef553972a1104b2f6062f045ef33b0c0f367c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
 
 <ul>
 <li>
@@ -773,7 +773,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_e2fffd12b832831a081bb0e1d4849c75c16c5d84_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
+<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_d55ef553972a1104b2f6062f045ef33b0c0f367c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
 
 <ul>
 <li>
@@ -811,7 +811,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_e2fffd12b832831a081bb0e1d4849c75c16c5d84_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
+<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_d55ef553972a1104b2f6062f045ef33b0c0f367c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
 
 <ul>
 <li>
@@ -862,11 +862,11 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#related_concepts_2'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/representation'>representation</a>/<a class='existingWikiWord' href='/nlab/show/action'>action</a> of a <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_e2fffd12b832831a081bb0e1d4849c75c16c5d84_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math> on a <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> <math class='maruku-mathml' display='inline' id='mathml_e2fffd12b832831a081bb0e1d4849c75c16c5d84_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/representation'>representation</a>/<a class='existingWikiWord' href='/nlab/show/action'>action</a> of a <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_d55ef553972a1104b2f6062f045ef33b0c0f367c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding='application/x-tex'>\mathfrak{g}</annotation></semantics></math> on a <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> <math class='maruku-mathml' display='inline' id='mathml_d55ef553972a1104b2f6062f045ef33b0c0f367c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>.</p>
 
 <h2 id='definition'>Definition</h2>
 
-<p>A Lie algebra <a class='existingWikiWord' href='/nlab/show/homomorphism'>homomorphism</a> <math class='maruku-mathml' display='inline' id='mathml_e2fffd12b832831a081bb0e1d4849c75c16c5d84_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi><mo>→</mo><mi>end</mi><mo stretchy='false'>(</mo><mi>V</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathfrak{g} \to end(V)</annotation></semantics></math> to the <a class='existingWikiWord' href='/nlab/show/endomorphism+Lie+algebra'>endomorphism Lie algebra</a> of <math class='maruku-mathml' display='inline' id='mathml_e2fffd12b832831a081bb0e1d4849c75c16c5d84_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>.</p>
+<p>A Lie algebra <a class='existingWikiWord' href='/nlab/show/homomorphism'>homomorphism</a> <math class='maruku-mathml' display='inline' id='mathml_d55ef553972a1104b2f6062f045ef33b0c0f367c_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔤</mi><mo>→</mo><mi>end</mi><mo stretchy='false'>(</mo><mi>V</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathfrak{g} \to end(V)</annotation></semantics></math> to the <a class='existingWikiWord' href='/nlab/show/endomorphism+Lie+algebra'>endomorphism Lie algebra</a> of <math class='maruku-mathml' display='inline' id='mathml_d55ef553972a1104b2f6062f045ef33b0c0f367c_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -877,6 +877,10 @@ margin-left: 0em;
 <h2 id='related_concepts_2'>Related concepts</h2>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lie+algebra+cohomology'>Lie algebra cohomology</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/action'>group action</a></p>
 </li>
@@ -892,17 +896,25 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on March  6, 2017 15:39:51 
+  Revised on February 26, 2018 13:40:09 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.25.95.132)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lie+algebra+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lie+algebra+representation/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Lie+algebra+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lie+algebra+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lie+algebra+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lie+algebra+representation/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Lie+algebra+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lie+algebra+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
